Use custom exception, fix issues by SonarLint