@@ -7,7 +7,6 @@ import com.j256.ormlite.table.TableUtils;
 import java.sql.SQLException;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 public class ExperienceRepositoryImpl extends AbstractRepository<ExperienceWrapper, Long> implements ExperienceRepository {
 
@@ -20,7 +19,7 @@ public class ExperienceRepositoryImpl extends AbstractRepository<ExperienceWrapp
             TableUtils.createTableIfNotExists(databaseManager.getConnectionSource(), ExperienceWrapper.class);
         }
         catch (SQLException sqlException) {
-            throw new RuntimeException(sqlException);
+            throw new ExperienceException("Failed to create table", sqlException);
         }
 
 
@@ -46,8 +45,7 @@ public class ExperienceRepositoryImpl extends AbstractRepository<ExperienceWrapp
         return this.find(id).thenCompose(experience -> {
             if (add) {
                 experience.addPoints(points);
-            }
-            else {
+            } else {
                 experience.removePoints(points);
             }
 
@@ -65,7 +63,7 @@ public class ExperienceRepositoryImpl extends AbstractRepository<ExperienceWrapp
     public CompletableFuture<List<Experience>> findAll() {
         return this.selectAll().thenApply(experienceWrappers -> experienceWrappers.stream()
                 .map(ExperienceWrapper::toExperience)
-                .collect(Collectors.toList())
+                .toList()
         );
     }
 
